# rpc-udp-test

firmware/: Cargo.toml
pc-app/: Cargo.toml
pc-app/src/: ingress.rs
pc-app/src/ingress/: engine.rs
pc-app/src/ingress/engine/: postcard_rpc.rs
rpc-definition/: Cargo.toml
